feat: add TH-RRH transition support and data quality dashboard
- Implement TH-RRH transition workflow in ProgramEnrollment aggregate
- Add EnrollmentTransitionedToRrh domain event
- Create ThRrhTransitionValidationService for business rule enforcement
- Implement ThRrhDataQualityJob for automated monitoring
- Add DataQualityDashboardService for reporting
- Create DataQualityAlert and DataQualityAlertService
- Add in-memory alert repository
- Update ProgramEnrollmentAppService with transition logic
- Add database migration for joint TH-RRH tracking

This enables HUD-compliant transitions from Transitional Housing to Rapid Rehousing with comprehensive data quality monitoring.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>